i rename release.Dockerfile to Dockerfile :Jimmy-Kimmel there's an afterparty? :Matt-Daemon never mind

--- a/dc-host.yml
+++ b/dc-host.yml
@@ -9,7 +9,7 @@ services:
     image: lang/reese
     build:
       context: ./Lang/Reese
-      dockerfile: release.Dockerfile
+      dockerfile: Dockerfile
     ports:
       - 3311:8080
     depends_on:
@@ -19,7 +19,7 @@ services:
     image: lang/biehn
     build:
       context: ./Lang/Biehn
-      dockerfile: release.Dockerfile
+      dockerfile: Dockerfile
     ports:
       - 3312:80
 
