- i name as should go-ipfs dir Sarah-Connor - i add :Moana alias to Dockerfile - i remove index.html and static from Reese :David-Mitchell are volunteer firemen allowed real water or they just mime it? :James-Acaster oh - they're allowed water - they just cant aim it at a fire

--- a/Lang/Biehn/Dockerfile
+++ b/Lang/Biehn/Dockerfile
@@ -15,7 +15,7 @@ WORKDIR /avatar
 COPY package.json .
 RUN npm i
 COPY deps.edn .
-RUN clojure -Stree
+RUN clojure -A:Moana -Stree
 COPY . .
 RUN bash avatar.sh release
 
