- i properly render brackets from Champions League 2005 page imported from wiki :James-Acaster they are just a volunteer fire brigade - they are not allowed to put out fires :Brydon what are they allowed to do?! just look at them?! :James they are permitted to pick up litter

--- a/Lang/Silberman/Dockerfile
+++ b/Lang/Silberman/Dockerfile
@@ -44,3 +44,4 @@ RUN git clone --depth 1 -b $MEDIAWIKI_BRANCH \
 
 COPY php.ini /usr/local/etc/php/conf.d/mediawiki.ini
 # COPY LocalSettings.php /var/www/html/LocalSettings.php
+COPY *.php /var/www/html/
