i uncomment wiki's port :Kate-McKinnon no - but it's nice to see you try

--- a/dc-host.yml
+++ b/dc-host.yml
@@ -39,8 +39,8 @@ services:
     image: lang/silberman
     build:
       context: ./Lang/Silberman
-    # ports:
-    #   - 8000:80
+    ports:
+      - 8000:80
     depends_on:
       - Thrain
     links:
