--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "dependencies": {
+    "@g-loot/react-tournament-brackets": "1.0.17",
+    "antd": "4.20.2",
     "express": "4.18.1",
     "ipfs-http-client": "56.0.3",
     "node-abort-controller": "3.0.1",
     "orbit-db": "0.28.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-tournament-bracket": "0.2.4",
+    "styled-components": "5.3.5",
     "ws": "8.6.0"
   },
   "devDependencies": {
